# ComfyUI-ShadertoyGL

./: README.md  nodes.py  pyproject.toml  requirements.txt
shaders/: Shader.py  Shadertoy.py  ShadertoyGLContext.py  shader_const.py
shaders/filters/: ColorChannelOffset.py
